2010-09-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Call _set_mesgout.
	* perl/Amanda/Application.swg, perl/Amanda/Script.pm (_set_mesgout):
	  Set $self->{mesgout}.
	* application-src/amraw.pl, application-src/amsamba.pl
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  Don't set $self->{mesgout}.

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: docs changes + defensive programming

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/find.c: only expect partnum/totalparts in taper log lines
	* installcheck/catalogs/bigdb.cat: tests

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-source-recovery.c: add XFER_MECH_DIRECTTCP_LISTEN to
	  XferSourceRecovery

2010-09-19  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/disk.pm: but still return stringy slot names

2010-09-19  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/disk.pm: sort slots numerically; patch by
	  'ghosts' on forums.zmanda.com

2010-09-18  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: more detail on LEOM handling in
	  tape device

2010-09-18  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Xfer.swg: conditionalize loading XferServer on server
	  component

2010-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Send filter STDERR to log file, backup is
	  marked as failed.

2010-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, device-src/tape-device.c,
	* device-src/vfs-device.c: Don't set the header if nothing is read.
	* device-src/vfs-device.c: Set header to F_EMTPY if file 0 doesn't
	  exists
	* perl/Amanda/Taper/Scan/traditional.pm: Correctly check device
	  status and header.
	* installcheck/Amanda_Changer_multi.pl: Updated.
	* installcheck/amcheck-device.pl: Updated.
	* installcheck/amdevcheck.pl: Updated.
